Add logic in all endpoint in Products Endpoint from Catalog.Presentation

--- a/crs/Services/Catalog/Catalog.Presentation/Catalog.Presentation.csproj
+++ b/crs/Services/Catalog/Catalog.Presentation/Catalog.Presentation.csproj
@@ -9,4 +9,12 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="MediatR" Version="12.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Catalog.UseCases\Catalog.UseCases.csproj" />
+	</ItemGroup>
 </Project>
