Add dotnet aspire project and add logic this project. Add Open Telemetry. Add Open Telemetry to Product.Api project. Add Redis di in Product.Api Project. Add PostgreSql di in Produc.Api project. Add logic in ProductConfiguration in Catalog.Infrastructure library. Add class startup in product.api project. Add automigrate dbcontext extension in Product.Api project.

--- a/crs/Services/Catalog/Catalog.Api/Catalog.Api.csproj
+++ b/crs/Services/Catalog/Catalog.Api/Catalog.Api.csproj
@@ -5,10 +5,20 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <IsServiceFabricServiceProject>True</IsServiceFabricServiceProject>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+    <PackageReference Include="Polly" Version="8.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Orchestrator\Dotnet.Aspire\Dotnet.Aspire.ServiceDefaults\Dotnet.Aspire.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Catalog.Presentation\Catalog.Presentation.csproj" />
   </ItemGroup>
 
 </Project>
